updated paper LSTM

--- a/paper/paper-DrexelFormat.tex
+++ b/paper/paper-DrexelFormat.tex
@@ -115,149 +115,94 @@ This section covers basic concept of deep learning. First Subsection \ref{subsec
 \begin{enumerate}
 \item Basic concepts of recurrent neural networks:
 
-	A recurrent neural network (RNN) is a neural network that is specialized for processing a sequence of input values \cite{Goodfellow-et-al-2016}. Figure \ref{fig:RNN} illustrates abstract structure of RNN. RNN has two input. One input is from data such as normal neural network input but another input is from previous output and the property gives benefit for sequential input data. This is because past output affects to current output. With sequential data, previous data can affect to current data and RNN considers previous output for current output. It means that even input from data are equal if previous output are different, current output are also different.
+	A recurrent neural network (RNN) is a neural network that is specialized for processing a sequence of input values \cite{Goodfellow-et-al-2016}. Figure \ref{fig:RNN} illustrates abstract structure of RNN. RNN has two input. One input is from data such as normal neural network input but another input is from previous output. The property gives benefit for sequential input data. This is because past output affects to current output. With sequential data, previous data can affect to current data and RNN considers previous output for current output. It means that even input from data are equal if previous output are different, current output are also different.
 	
 \begin{figure}[t!]
     \centering
     \includegraphics[width=0.65\textwidth]{pictures/figures/RNN.png}
-    \caption{RNN}
+    \caption{RNN {\color{red} change variables}}
     \label{fig:RNN}
 \end{figure}
 	
 	For example, human language sentences have series of words and meaning of words is different in different context. RNN can be used for that. Another example is driving data which is used later on the paper.  Driving data are multi-dimension data with time domain. RNN can be used for the data because it is sequential data with time domain.
 	
-	To describe RNN in math equation, let $\vec{x}^t = \{ x_1^t, ..., x_n^t\} \in \mathbb{R}^n$ be a vector that represents the input data at time $t$, $h^{t} = \{ h_1^t, ..., h_m^t\} $ be result from hidden layer on time $t$, and $o^{t}$ be output on time $t$. The tensor $U$ is a set of neurons for input data, The tensor $V$ is a set of neurons for data from hidden layer and the tensor $W$ is a set of neurons for previous output. The figure \ref{fig:unfold_RNN} illustrates unfolded RNN with defined symbols. The result from hidden layer can be calculated by 
-	$$h^{t} = f(Ux^{t} + Wo^{t-1} + b_h)$$ where $f()$ is activation function for hidden layer and $b$ is bias for hidden layer. Then the output can be calculated by
-	$$o^{t} = g(Vh^{t}+b_o)$$ where $g()$ is activation function for output layer and $b_o$ is bias for output layer. Therefore, RNN can be written in
-	$$o^{t} = g(Vf(Ux^{t} + Wo^{t-1} + b_h) + b_o)$$
+	To describe RNN in math equation, let $\vec{x^t} = \{ x_1^t, ..., x_n^t\} \in \mathbb{R}^n$ be a vector that represents the input data at time $t$, $\vec{h^t} = \{ h_1^t, ..., h_m^t\} \in \mathbb{R}^m$ be result from hidden layer on time $t$, and $\vec{o^t} = \{ o_1^t, ..., o_l^t\} \in \mathbb{R}^l$ be output on time $t$. For transform matrix, let $\bold{U}: \mathbb{R}^n \rightarrow \mathbb{R}^m$ be a transform matrix for input data, $\bold{V}: \mathbb{R}^m \rightarrow \mathbb{R}^l$ be a transform matrix for data from hidden layer, and $\bold{W}: \mathbb{R}^l \rightarrow \mathbb{R}^m$ be a transform matrix for previous output. The figure \ref{fig:unfold_RNN} illustrates unfolded RNN with defined symbols. The result from hidden layer can be calculated by 
+	$$\vec{h^t} = \bold{f}(\vec{x^t}\bold{U} + \vec{o^{t-1}}\bold{W} + \vec{b_h})$$ where $\bold{f}()$ is activation function for hidden layer and it is applied for each elements in given vector, $\vec{b_h} \in \mathbb{R}^m$ is a vector for hidden layer bias. Then the output can be calculated by
+	$$\vec{o^t} = \bold{g}(\vec{h^t}\bold{V}+\vec{b_o})$$ where $\bold{g}()$ is activation function for output layer and it is applied for each elements in given vector, $\vec{b_o} \in \mathbb{R}^l$ is a vector for output layer bias. Therefore, RNN can be written in
+	$$\vec{o^t} = \bold{g}(\bold{f}(\vec{x^t}\bold{U} + \vec{o^{t-1}}\bold{W} + \vec{b_h})\bold{V}+\vec{b_o})$$
 	
 \begin{figure}[t!]
     \centering
     \includegraphics[width=0.5\textwidth]{pictures/figures/unfold_RNN.png}
-    \caption{Unfold RNN}
+    \caption{Unfold RNN {\color{red} change variables}}
     \label{fig:unfold_RNN}
 \end{figure}
 
-	RNN is not always like the figure \ref{fig:unfold_RNN}. Input from previous output can be replaced by result of previous hidden layer. The main idea of RNN is when neural network decides current output it considers previous state.
+	RNN is not always like the Figure \ref{fig:unfold_RNN}. Input from previous output can be replaced by result of previous hidden layer. The main idea of RNN is when neural network decides current output it considers previous state.
 	
 
 \item Long Short Term Memory (LSTM) networks:
 
-	Basic RNN have the problem of long term dependency. It means that an RNN is not able to memorize long term knowledge. To solve the problem, LSTMs were introduced by Hochreiter and Schmidhuber \cite{hochreiter1997long}. An LSTM has a cell state and it solves the long term memory problem in RNN because cell state can store long term memory {\color{red} [santi: explain what is ``cell state'']}.
+	Basic RNN has the problems of long term dependency. When RNN passes previous output for current output, some information in the input might not need or might need for future. RNN does not have ability to filter unnecessary information or to store necessary information. Long Short Term Memory (LSTM) neural network can handle these problems.
 	
-	Bengio mentioned on his paper \cite{bengio2009learning} that each layers in deep neural network should have {\color{red} a} purpose. LSTM can be divided to four layers: forget gate, input gate, input moduleation gate, and output gate. Each layers have different purpose {\color{red} [santi: this paragraph does not flow very well], even if Bengio mentioned it, why is it important? you need to explain WHY is it that each layer should have a purpose. Otherwise, we just have to blindly believe in Bengio :)}.
+	LSTM is a type of RNN and introduced by Hochreiter and Schmidhuber \cite{hochreiter1997long}. LSTM solves long term dependency problems in RNN by memory cells. LSTM manages memory cells as storage of knowledge. LSTM filters unnecessary information from memory cells and records necessary information on memory cells.
 	
-	{\color{red} [santi: this paragraph does not read very well, in blue below, I have an alternative version that flows better (just as an example)]}
-	 Colah's blog \footnote{\url{http://colah.github.io/posts/2015-08-Understanding-LSTMs}} develops an intuition for concept of LSTM and explains purpose of each layer{\color{red} \st{s}}. The paper \cite{zaremba2014recurrent} describes LSTM in mathematical term{\color{red}s}. In this paper, I'm going to summarize both the Colah's blog and the paper \cite{zaremba2014recurrent}
-	 
-	{\color{blue} Let us first provide an intuitive description of how LSTMs work (following Christopher Olah's blog \footnote{\url{http://colah.github.io/posts/2015-08-Understanding-LSTMs}}), before providing a more in-depth formalization}:
+	The structure of LSTM consists of four gates: forget gate, input gate, input modulation gate, and output gate. Each gates have different purpose and Christopher Olah's blog \footnote{\url{http://colah.github.io/posts/2015-08-Understanding-LSTMs}} develops an intuition for concept of LSTM and explains purpose of each gates. The paper \cite{zaremba2014recurrent}  describes LSTM in mathematical term. Let us first provide an intuitive description of how LSTM work by following Christopher Olah's blog, before providing a more in-depth formalization.
+	
+%	and the paper \cite{zaremba2014recurrent} 
+	
+%	Bengio mentioned on his paper \cite{bengio2009learning} that each layers in deep neural network should have {\color{red} a} purpose. LSTM can be divided to four layers: forget gate, input gate, input modulation gate, and output gate. Each layers have different purpose {\color{red} [santi: this paragraph does not flow very well], even if Bengio mentioned it, why is it important? you need to explain WHY is it that each layer should have a purpose. Otherwise, we just have to blindly believe in Bengio :)}.
+
+%	 Colah's blog \footnote{\url{http://colah.github.io/posts/2015-08-Understanding-LSTMs}} develops an intuition for concept of LSTM and explains purpose of each layer{\color{red} \st{s}}. The paper \cite{zaremba2014recurrent} describes LSTM in mathematical term{\color{red}s}. In this paper, I'm going to summarize both the Colah's blog and the paper \cite{zaremba2014recurrent}
 	
 	\begin{enumerate}
-	\item An intuitive {\color{red} \st{concept} explanation} of LSTM{\color{red}s}:
+	\item An intuitive explanation of LSTMs:
 	
-		Colah's {\color{red} [santi: ``Colah'' $\to$ ``Christopher Olah'']} blog explains concept of LSTM and summarizes four layers in LSTM with each purpose. {\color{red} [santi: in LaTeX, the way to separate paragraphs is to leave a blank line between them, not using the double backslash (which should not be used often).]}
+		The easiest way to understand LSTM is to understand memory cell and purpose of four different gates. Memory cell makes LSTM different from RNN. Memory cell stores important information and filters unimportant information for future. Three of four gates are involved in the memory cells to store and filter information.
 		
-		The first layer is forget gate. The forget gate filters what data to forget or throw away. It consists of sigmod {\color{red} [santi: instead of saying ``It consists of sigmod'', you should say something like ``The units in this layer use a sigmoid activation function'' (same comment for all the other layers below)]} layer with previous output and current input data {\color{red} [santi: a reader not familiar with LSTMs will not know what is ``previous output'' or ``current input'', so you need a figure that explains it]}. The result of the forget gate is multiplied by previous cell state to build current cell state.
+		The first gate affecting to memory cells is forget gate. The forget gate decides unnecessary data from input data and previous output then applies it to memory cells. Other two gates are input gate and input modulation gate and these also affect to memory cells. The two gates decide what information remember then apply it to memory cells. The last gate is output gate and it does not directly affect to memory cells. Output gate also has two inputs from input data and previous output, and output from output gate is multiplied by memory cells to make final output. The Figure \ref{fig:LSTM} illustrates LSTM neural network with four gates and next part describes more detail of LSTM and the figure in mathematical terms.
+
+\begin{figure}[t!]
+    \centering
+    \includegraphics[width=0.75\textwidth]{pictures/figures/LSTM.png}
+    \caption{LSTM {\color{red} change variables}}
+    \label{fig:LSTM}
+\end{figure}
 		
-		The second layer is input gate and also consists of sigmod layer with previous output and current input data. The result of the input gate is multiplied by the result of input modulation gate then it affects to cell state {\color{red} [santi: all of these terms should appear in a figure, otherwise, a reader not familiar with it will not understand what you are saying. But also, even if you have a figure, you need to explain what each term is, e.g., explain what is ``input modulation'', what is ``cell state'', etc.]}. The meaning of input gate is to decide{\color{red} \st{s}} what data to remember.
+		% It consists of sigmod {\color{red} [santi: instead of saying ``It consists of sigmod'', you should say something like ``The units in this layer use a sigmoid activation function'' (same comment for all the other layers below)]} layer with previous output and current input data {\color{red} [santi: a reader not familiar with LSTMs will not know what is ``previous output'' or ``current input'', so you need a figure that explains it]}. The result of the forget gate is multiplied by previous cell state to build current cell state.
 		
-		The third layer is input modulation gate. It consists of tanh with previous output and current input. It is multiplied by the result of second layer and affects to current cell state.
+		% The second layer is input gate and also consists of sigmod layer with previous output and current input data. The result of the input gate is multiplied by the result of input modulation gate then it affects to cell state {\color{red} [santi: all of these terms should appear in a figure, otherwise, a reader not familiar with it will not understand what you are saying. But also, even if you have a figure, you need to explain what each term is, e.g., explain what is ``input modulation'', what is ``cell state'', etc.]}. The meaning of input gate is to decide{\color{red} \st{s}} what data to remember.
 		
-		The last layer is output gate. The layer decides what data should be passed to current output from previous output and current input. the output gate also consists of sigmoid with two inputs: last output and current input. The result of the layer is multiplied by current cell state passed tanh.
+		% The third layer is input modulation gate. It consists of tanh with previous output and current input. It is multiplied by the result of second layer and affects to current cell state.
+		
+		% The last layer is output gate. The layer decides what data should be passed to current output from previous output and current input. the output gate also consists of sigmoid with two inputs: last output and current input. The result of the layer is multiplied by current cell state passed tanh.
 	
-	\item Modeling LSTM in mathematical term{\color{red}s}:
-		LSTM is described in mathematical term in the paper \cite{zaremba2014recurrent}. I'm going to summarize it on this paper.\\
-	Let\\
-	$T_{n,m}: \mathbb{R}^n \rightarrow \mathbb{R}^m$ be an affine transform\\
-	$x_t$ be size $n$ vector for current input\\
-	$h_{t-1}$ be size $n$ vector for last output \\
-	$h_{t}$ be size $n$ vector for current output \\
-	$c_{t-1}$ be size $n$ vector for last cell state \\
-	$c_{t}$ be size $n$ vector for current cell state \\
+	\item Modeling LSTMs in mathematical terms:
+	
+		To describe LSTM in mathematical terms, let $\vec{x^t} = \{ x_1^t, ..., x_n^t\} \in \mathbb{R}^n$ be a vector that represents the input data at time $t$, $\vec{i^t} = \{i_1^t, ..., i_m^t\} \in \mathbb{R}^m$ be result from input gate on time $t$, $\vec{m^t} = \{m_1^t, ..., m_m^t\} \in \mathbb{R}^m$ be result from input modulation gate on time $t$, $\vec{f^t} = \{f_1^t, ..., f_m^t\} \in \mathbb{R}^m$ be result from forget gate on time $t$, $\vec{o^t} = \{o_1^t, ..., o_m^t\} \in \mathbb{R}^m$ be result from output gate on time $t$, $\vec{c^t} = \{c_1^t, ..., c_m^t\} \in \mathbb{R}^m$ be memory cells on time $t$, and $\vec{h^t} = \{h_1^t, ..., h_m^t\} \in \mathbb{R}^m$ be final result on time $t$.
+Each gates have transform matrices for inputs. Let $\bold{T_{n,m}}: \mathbb{R}^n \rightarrow \mathbb{R}^m$ be a transform matrix from $n$ dimension to $m$ dimension. Let $\bold{T_{n,m}^{ii}}$ be a transform matrix for input from data in input gate, $\bold{T_{m,m}^{oi}}$ be a transform matrix for input from previous output in input gate, $\bold{T_{n,m}^{im}}$ be a transform matrix for input from data in input modulation gate, $\bold{T_{m,m}^{om}}$ be a transform matrix for input from previous output in input modulation gate, $\bold{T_{n,m}^{if}}$ be a transform matrix for input from data in forget gate, $\bold{T_{m,m}^{of}}$ be a transform matrix for input from previous output in forget gate, $\bold{T_{n,m}^{io}}$ be a transform matrix for input from data in output gate, $\bold{T_{m,m}^{oo}}$ be a transform matrix for input from previous output in output gate.
 
-\[
-\begin{bmatrix}
-    input\_gate \\
-    forget\_gate \\
-    output\_gate \\
-    input\_modulation\_gate
-\end{bmatrix}
-=
-\begin{bmatrix}
-    i \\
-    f \\
-    o \\
-    g
-\end{bmatrix}
-=
-\begin{bmatrix}
-    sigm & 0 & 0 & 0\\
-    0 & sigm & 0 & 0\\
-    0 & 0 & sigm & 0\\
-    0 & 0 & 0 & tanh
-\end{bmatrix}
-T_{2n,4n}
-\begin{bmatrix}
-    h_{t-1} \\
-    x_{t}
-\end{bmatrix}
-\]
-\[
-=
-\begin{bmatrix}
-    sigm & 0 & 0 & 0\\
-    0 & sigm & 0 & 0\\
-    0 & 0 & sigm & 0\\
-    0 & 0 & 0 & tanh
-\end{bmatrix}
-\begin{bmatrix}
-    {T^{hi}}_{n,n} & {T^{xi}}_{n,n} \\
-    {T^{hf}}_{n,n} & {T^{xf}}_{n,n} \\
-    {T^{ho}}_{n,n} & {T^{xo}}_{n,n} \\
-    {T^{hg}}_{n,n} & {T^{xg}}_{n,n}
-\end{bmatrix}
-\begin{bmatrix}
-    h_{t-1} \\
-    x_{x}
-\end{bmatrix}
-\]
-\[
-=
-\begin{bmatrix}
-    sigm & 0 & 0 & 0\\
-    0 & sigm & 0 & 0\\
-    0 & 0 & sigm & 0\\
-    0 & 0 & 0 & tanh
-\end{bmatrix}
-\begin{bmatrix}
-    {T^{hi}}_{n,n}h_{t-1} + {T^{xi}}_{n,n}x_{x} \\
-    {T^{hf}}_{n,n}h_{t-1} + {T^{xf}}_{n,n}x_{x} \\
-    {T^{ho}}_{n,n}h_{t-1} + {T^{xo}}_{n,n}x_{x} \\
-    {T^{hg}}_{n,n}h_{t-1} + {T^{xg}}_{n,n}x_{x}
-\end{bmatrix}
-\]
-Therefore,\\
-\[
-\begin{bmatrix}
-    i \\
-    f \\
-    o \\
-    g
-\end{bmatrix}
-=
-\begin{bmatrix}
-    sigm({T^{hi}}_{n,n}h_{t-1} + {T^{xi}}_{n,n}x_{x}) \\
-    sigm({T^{hf}}_{n,n}h_{t-1} + {T^{xf}}_{n,n}x_{x}) \\
-    sigm({T^{ho}}_{n,n}h_{t-1} + {T^{xo}}_{n,n}x_{x}) \\
-    tanh({T^{hg}}_{n,n}h_{t-1} + {T^{xg}}_{n,n}x_{x})
-\end{bmatrix}
-\]
-
-$\{i, f, o, g\}$ is a set of output from each layers.
-The current cell state $c_t = f \cdot c_{t-1} + i \cdot g$
-the current output $h_t = o \cdot tanh(c_t)$
-
+		The result of each gates are computed as following:
+		$$\vec{i^t} = \bold{sigm}(\vec{x^t}\bold{T_{n,m}^{ii}} + \vec{h^{t-1}}\bold{T_{m,m}^{oi}} + \vec{b_i})$$
+		Input gate uses sigmoid function $\bold{sigm()}$ for activation function and $\vec{b_i} \in \mathbb{R}^m$ is a vector for input gate bias.
+		$$\vec{m^t} = \bold{tanh}(\vec{x^t}\bold{T_{n,m}^{im}} + \vec{h^{t-1}}\bold{T_{m,m}^{om}} + \vec{b_m})$$
+		Input modulation gate uses tanh function $\bold{tanh()}$ for activation function and $\vec{b_m} \in \mathbb{R}^m$ is a vector for input modulation gate bias.
+		$$\vec{f^t} = \bold{sigm}(\vec{x^t}\bold{T_{n,m}^{if}} + \vec{h^{t-1}}\bold{T_{m,m}^{of}} + \vec{b_f})$$
+		Forget gate uses sigmoid function $\bold{sigm()}$ for activation function and $\vec{b_f} \in \mathbb{R}^m$ is a vector for forget gate bias.
+		$$\vec{o^t} = \bold{sigm}(\vec{x^t}\bold{T_{n,m}^{io}} + \vec{h^{t-1}}\bold{T_{m,m}^{oo}} + \vec{b_o})$$
+		Output gate uses sigmoid function $\bold{sigm()}$ for activation function and $\vec{b_o} \in \mathbb{R}^m$ is a vector for output gate bias.
+		
+		
+		Memory cells are computed as
+		$$\vec{c^t} = \vec{i^t} * \vec{m^t} + \vec{f^t} * \vec{c^{t-1}}$$
+		
+		And final result is computed as
+		$$\vec{h^t} = \vec{c^t} * \vec{o^t}$$
+		
+		Where $*$ is component-wise multiplication of two vectors.
 	\end{enumerate}
+	
+	LSTM neural network described above is one example of LSTMs. There are many other LSTMs but all LSTMs has memory cells to store information for long term memory and has four gates: input, input modulation, forget, and output gate.
 \end{enumerate}
 
 \subsection{Auto-encoder}\label{subsec:AE}
