updated paper - abstract

--- a/paper/paper-DrexelFormat.tex
+++ b/paper/paper-DrexelFormat.tex
@@ -78,7 +78,10 @@
 % \iffinal{}{\newpage}
 
 \begin{abstract}
-{\color{blue}[To do: Write an abstract here]}
+{\color{blue}[To do: Review, 'This is the Title'?]}
+
+The driving simulation data is popularly used for AI such as self-driving car. Children Hospital of Philadelphia (CHOP) is also interested on driving simulation data and AI to diagnose teenager's attention deficit/hyperactivity disorder (ADHD). The paper introduces to classification between expert and inexpert driver on given simulation data by using LSTM deep neural network. To deal with a few number of simulation data, cross validation is used and to deal with too densely sampled original data, the original is re-sampled. The paper also compares classifications between reduced dimension data by human and reduced dimension data by Auto-encoder.
+
 \end{abstract}
 \end{preamble}
 
@@ -120,7 +123,7 @@ This section covers basic concept of deep learning. First Subsection \ref{subsec
 \begin{figure}[t!]
     \centering
     \includegraphics[width=0.65\textwidth]{pictures/figures/RNN.png}
-    \caption{RNN {\color{red} change variables}}
+    \caption{RNN}
     \label{fig:RNN}
 \end{figure}
 	
